--- a/productpage.html
+++ b/productpage.html
@@ -141,9 +141,92 @@
                     <div class="product-content-border">
                         <!-- row -->    
                          <div class="row">
-                             <div class="col-4"></div>
-                             <div class="col-4"></div>
-                             <div class="col-md-3 offset-md-9">
+                             <div class="col-4">
+                                <div class="product-image-container">
+                                    <img src="./img/carousel/image 34.png" alt="Main Product Image" class="product-main-image" id="mainImage">
+                                    <div class="product-thumbnails">
+                                        <img src="./img/carousel/image 39.png" alt="Thumbnail 1" onclick="changeMainImage(this.src)">
+                                        <img src="./img/carousel/image 35.png" alt="Thumbnail 2" onclick="changeMainImage(this.src)">
+                                        <img src="./img/carousel/image 36.png" alt="Thumbnail 3" onclick="changeMainImage(this.src)">
+                                        <img src="./img/carousel/image 37.png" alt="Thumbnail 4" onclick="changeMainImage(this.src)">
+                                        <img src="./img/carousel/image 40.png" alt="Thumbnail 5" onclick="changeMainImage(this.src)">
+                                        <img src="./img/carousel/image 39.png" alt="Thumbnail 6" onclick="changeMainImage(this.src)">
+                                    </div>
+                                </div>
+                             </div>
+                             <div class="col-4 product-details">
+                                <div class="in-stock"><i class="fa-solid fa-check"></i> In stock</div>
+                                <h5 class="p-detail-title">Mens Long Sleeve T-shirt Cotton Base Layer Slim Muscle</h5>
+                                <div class="rating">
+                                    <span class="fa fa-star text-warning"></span>
+                                    <span class="fa fa-star text-warning"></span>
+                                    <span class="fa fa-star text-warning"></span>
+                                    <span class="fa fa-star text-warning"></span>
+                                    <span class="fa fa-star"></span>
+                                    <span class="text-warning">  9.3</span> 
+                                    <i class="fa-solid fa-circle align-middle" style="color: #dbdbdd; font-size: 5px;"></i>
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chat-left-text text-body-tertiary" viewBox="0 0 16 16">
+                                        <path d="M14 1a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1H4.414A2 2 0 0 0 3 11.586l-2 2V2a1 1 0 0 1 1-1zM2 0a2 2 0 0 0-2 2v12.793a.5.5 0 0 0 .854.353l2.853-2.853A1 1 0 0 1 4.414 12H14a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2z"/>
+                                        <path d="M3 3.5a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5M3 6a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9A.5.5 0 0 1 3 6m0 2.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5"/>
+                                      </svg>
+                                    <span class="text-body-tertiary"> 32 reviews  </span>
+                                    <i class="fa-solid fa-circle align-middle" style="color: #dbdbdd; font-size: 5px;"></i>
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-basket2 text-body-tertiary" viewBox="0 0 16 16">
+                                        <path d="M4 10a1 1 0 0 1 2 0v2a1 1 0 0 1-2 0zm3 0a1 1 0 0 1 2 0v2a1 1 0 0 1-2 0zm3 0a1 1 0 1 1 2 0v2a1 1 0 0 1-2 0z"/>
+                                        <path d="M5.757 1.071a.5.5 0 0 1 .172.686L3.383 6h9.234L10.07 1.757a.5.5 0 1 1 .858-.514L13.783 6H15.5a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-.623l-1.844 6.456a.75.75 0 0 1-.722.544H3.69a.75.75 0 0 1-.722-.544L1.123 8H.5a.5.5 0 0 1-.5-.5v-1A.5.5 0 0 1 .5 6h1.717L5.07 1.243a.5.5 0 0 1 .686-.172zM2.163 8l1.714 6h8.246l1.714-6z"/>
+                                      </svg>
+                                    <span class="text-body-tertiary">154 sold</span>
+                                </div>
+                                <div class="price-range">
+                                    <div class="p-range-left">
+                                        <h6 class="text-danger fw-bold">$98.00</h6>
+                                        <p>50-100pcs</p>
+                                    </div>
+                                   <div class="p-range-center">
+                                    <h6 class="fw-bold">$90.00</h6>
+                                    <p>100-700pcs</p>
+                                   </div>
+                                   <div class="p-range-right">
+                                    <h6 class="fw-bold">$78.00</h6>
+                                    <p>700+pcs</p>
+                                   </div>
+                                </div>
+                                <div class="detail-table">
+                                    <div class="detail-box">
+                                        <p class="option">Price:</p>
+                                        <p class="option-detail">Negotiable</p>
+                                    </div>
+                                    <div class="detail-box-two">
+                                        <div class="d-flex">
+                                            <p class="option">Type:</p>
+                                            <p class="option-detail">Classic shoes</p>
+                                        </div>
+                                        <div class="d-flex">
+                                            <p class="option">Material:</p>
+                                            <p class="option-detail">Plastic material</p>
+                                        </div>
+                                        <div class="d-flex">
+                                            <p class="option">Design:</p>
+                                            <p class="option-detail">Modern nice</p>
+                                        </div>
+                                    </div>
+                                    <div class="detail-box-two">
+                                        <div class="d-flex">
+                                            <p class="option">Customization:</p>
+                                            <p class="option-detail">Customized logo and <br> design custom packages</p>
+                                        </div>
+                                        <div class="d-flex">
+                                            <p class="option">Protection:</p>
+                                            <p class="option-detail">Refund policy</p>
+                                        </div>
+                                        <div class="d-flex">
+                                            <p class="option">Warranty:</p>
+                                            <p class="option-detail">2 years full warranty</p>
+                                        </div>
+                                    </div>
+                                </div>
+                             </div>
+                             <div class="col-md-3 offset-1">
                                 <div class="supplier-info">
                                     <div class="supplier-group">
                                         <div class="supplier-logo">R</div>
