--- a/productpage.html
+++ b/productpage.html
@@ -143,9 +143,9 @@
                          <div class="row">
                              <div class="col-4">
                                 <div class="product-image-container">
-                                    <img src="./img/carousel/image 34.png" alt="Main Product Image" class="product-main-image" id="mainImage">
+                                    <img src="./img/carousel/image 34.png" alt="Main Product Image" class="product-image-main" id="mainImage">
                                     <div class="product-thumbnails">
-                                        <img src="./img/carousel/image 39.png" alt="Thumbnail 1" onclick="changeMainImage(this.src)">
+                                        <img src="./img/carousel/image 39.png" class="border-black" alt="Thumbnail 1" onclick="changeMainImage(this.src)">
                                         <img src="./img/carousel/image 35.png" alt="Thumbnail 2" onclick="changeMainImage(this.src)">
                                         <img src="./img/carousel/image 36.png" alt="Thumbnail 3" onclick="changeMainImage(this.src)">
                                         <img src="./img/carousel/image 37.png" alt="Thumbnail 4" onclick="changeMainImage(this.src)">
@@ -262,8 +262,51 @@
                  </div>
              </div>
             <!--/ Product Details and image content  -->
+
+
+
+             <!-- Product Description  -->
+             <div id="product-description" class="section">
+             <!-- container -->
+               <div class="container">
+                   <div class="product-description-border">
+                 <!-- row -->    
+                       <div class="row">
+                             <div class="col-8"></div>
+                             <div class="col-4"></div>
+                       </div>
+                   </div>
+               </div>
+             </div>
+
+             <!-- related product  -->
+             <div id="product-related" class="section">
+                <!-- container -->
+                  <div class="container">
+                      <div class="product-related-border">
+                    <!-- row -->    
+                          <div class="row">
+                                <div class="col"></div>
+                          </div>
+                      </div>
+                  </div>
+                </div>
+             <!-- discount product  -->
+             <div id="product-discount" class="section">
+                <!-- container -->
+                  <div class="container">
+                      <div class="product-discount-border">
+                    <!-- row -->    
+                          <div class="row">
+                             <div class="col-12"></div>
+                          </div>
+                      </div>
+                  </div>
+                </div>
         </div>
     
+ 
+
         
     <!-- FOOTER -->
     <footer id="footer">
@@ -371,6 +414,8 @@
         <!-- /bottom footer -->
     </footer>
     <!-- /FOOTER -->
+     <script src="productpage.js"></script>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
