--- a/productpage.html
+++ b/productpage.html
@@ -267,17 +267,113 @@
 
              <!-- Product Description  -->
              <div id="product-description" class="section">
-             <!-- container -->
-               <div class="container">
-                   <div class="product-description-border">
-                 <!-- row -->    
-                       <div class="row">
-                             <div class="col-8"></div>
-                             <div class="col-4"></div>
+                    <!-- container -->
+                       <div class="container">
+                         <!-- row -->    
+                                  <div class="row">
+                                        <div class="col-9 product-description">
+                                            <ul class="nav nav-underline tab-nav">
+                                                <li class="nav-item">
+                                                    <a class="nav-link active text-primary" aria-current="page" href="#nav-description">Description</a>
+                                                </li>
+                                                <li class="nav-item">
+                                                    <a class="nav-link" href="#nav-reviews">Reviews</a>
+                                                </li>
+                                                <li class="nav-item">
+                                                    <a class="nav-link" href="#nav-shipping">Shipping</a>
+                                                </li>
+                                                <li class="nav-item">
+                                                    <a class="nav-link" href="#nav-about">About seller</a>
+                                                </li>
+                                            </ul>
+                                            <div class="mt-3">
+                                                <div id="nav-description">
+                                                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                                                         quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,  <br>
+                                                          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                                                          <div class="product-specs-div">
+                                                        <div class="spec-row">
+                                                            <div class="spec-key">Model</div>
+                                                            <div class="spec-value">#87566867</div>
+                                                        </div>
+                                                        <div class="spec-row">
+                                                            <div class="spec-key">Style</div>
+                                                            <div class="spec-value">Classic style</div>
+                                                        </div>
+                                                        <div class="spec-row">
+                                                            <div class="spec-key">Certificate</div>
+                                                            <div class="spec-value">ISO-898921212</div>
+                                                        </div>
+                                                        <div class="spec-row">
+                                                            <div class="spec-key">Size</div>
+                                                            <div class="spec-value">34mm x 450mm x 19mm</div>
+                                                        </div>
+                                                        <div class="spec-row">
+                                                            <div class="spec-key">Memory</div>
+                                                            <div class="spec-value">36GB RAM</div>
+                                                        </div>
+                                                    </div>
+                            
+                                                    <ul class="list-unstyled product-features">
+                                                        <li><i class="fas fa-check text-success mr-2"></i> Some great feature name here</li>
+                                                        <li><i class="fas fa-check text-success mr-2"></i> Lorem ipsum dolor sit amet, consectetur</li>
+                                                        <li><i class="fas fa-check text-success mr-2"></i> Duis aute irure dolor in reprehenderit</li>
+                                                        <li><i class="fas fa-check text-success mr-2"></i> Some great feature name here</li>
+                                                    </ul>
+                                                </div>
+                                                <div id="nav-reviews" style="display: none;">
+                                                    <p>No reviews yet.</p>
+                                                </div>
+                                                <div id="nav-shipping" style="display: none;">
+                                                    <p>Shipping information will be displayed here.</p>
+                                                </div>
+                                                <div id="nav-about" style="display: none;">
+                                                    <p>Information about the seller.</p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col you-may-like">
+                                            <h5>You may like</h5>
+                                            <div class="suggestion-item">
+                                                <img src="https://via.placeholder.com/60/007bff/FFFFFF?Text=Blazer" alt="Blazer">
+                                                <div class="suggestion-details">
+                                                    <div class="suggestion-title">Men Blazers Sets Elegant Formal</div>
+                                                    <div class="suggestion-price">$7.00 - $99.50</div>
+                                                </div>
+                                            </div>
+                                            <div class="suggestion-item">
+                                                <img src="https://via.placeholder.com/60/28a745/FFFFFF?Text=Shirt" alt="Shirt">
+                                                <div class="suggestion-details">
+                                                    <div class="suggestion-title">Men Shirt Sleeve Polo Contrast</div>
+                                                    <div class="suggestion-price">$7.00 - $99.50</div>
+                                                </div>
+                                            </div>
+                                            <div class="suggestion-item">
+                                                <img src="https://via.placeholder.com/60/a77728/FFFFFF?Text=Watch" alt="Watch">
+                                                <div class="suggestion-details">
+                                                    <div class="suggestion-title">Apple Watch Series Space Gray</div>
+                                                    <div class="suggestion-price">$7.00 - $99.50</div>
+                                                </div>
+                                            </div>
+                                            <div class="suggestion-item">
+                                                <img src="https://via.placeholder.com/60/00aaff/FFFFFF?Text=Socks" alt="Socks">
+                                                <div class="suggestion-details">
+                                                    <div class="suggestion-title">Basketball Crew Socks Long Stuff</div>
+                                                    <div class="suggestion-price">$7.00 - $99.50</div>
+                                                </div>
+                                            </div>
+                                            <div class="suggestion-item">
+                                                <img src="https://via.placeholder.com/60/6c757d/FFFFFF?Text=T-Shirt" alt="T-Shirt">
+                                                <div class="suggestion-details">
+                                                    <div class="suggestion-title">New Summer Men's castrol T-Shirts</div>
+                                                    <div class="suggestion-price">$7.00 - $99.50</div>
+                                                </div>
+                                            </div>
+                                        </div>    
+                                  </div>
                        </div>
-                   </div>
-               </div>
              </div>
+            <!-- /Product Description  -->
 
              <!-- related product  -->
              <div id="product-related" class="section">
@@ -291,6 +387,9 @@
                       </div>
                   </div>
                 </div>
+                <!-- /related product  -->
+
+
              <!-- discount product  -->
              <div id="product-discount" class="section">
                 <!-- container -->
@@ -303,6 +402,8 @@
                       </div>
                   </div>
                 </div>
+                 <!-- /discount product  -->
+
         </div>
     
  
