--- a/productpage.html
+++ b/productpage.html
@@ -333,37 +333,37 @@
                                             </div>
                                         </div>
                                         <div class="col you-may-like">
-                                            <h5>You may like</h5>
+                                            <h6>You may like</h6>
                                             <div class="suggestion-item">
-                                                <img src="https://via.placeholder.com/60/007bff/FFFFFF?Text=Blazer" alt="Blazer">
+                                                <img src="./img/cloth/7.png" alt="Blazer">
                                                 <div class="suggestion-details">
                                                     <div class="suggestion-title">Men Blazers Sets Elegant Formal</div>
                                                     <div class="suggestion-price">$7.00 - $99.50</div>
                                                 </div>
                                             </div>
                                             <div class="suggestion-item">
-                                                <img src="https://via.placeholder.com/60/28a745/FFFFFF?Text=Shirt" alt="Shirt">
+                                                <img src="./img/cloth/1.png" alt="Shirt">
                                                 <div class="suggestion-details">
                                                     <div class="suggestion-title">Men Shirt Sleeve Polo Contrast</div>
                                                     <div class="suggestion-price">$7.00 - $99.50</div>
                                                 </div>
                                             </div>
                                             <div class="suggestion-item">
-                                                <img src="https://via.placeholder.com/60/a77728/FFFFFF?Text=Watch" alt="Watch">
+                                                <img src="./img/cloth/3.png" alt="Watch">
                                                 <div class="suggestion-details">
                                                     <div class="suggestion-title">Apple Watch Series Space Gray</div>
                                                     <div class="suggestion-price">$7.00 - $99.50</div>
                                                 </div>
                                             </div>
                                             <div class="suggestion-item">
-                                                <img src="https://via.placeholder.com/60/00aaff/FFFFFF?Text=Socks" alt="Socks">
+                                                <img src="./img/cloth/2.png" alt="Socks">
                                                 <div class="suggestion-details">
                                                     <div class="suggestion-title">Basketball Crew Socks Long Stuff</div>
                                                     <div class="suggestion-price">$7.00 - $99.50</div>
                                                 </div>
                                             </div>
                                             <div class="suggestion-item">
-                                                <img src="https://via.placeholder.com/60/6c757d/FFFFFF?Text=T-Shirt" alt="T-Shirt">
+                                                <img src="./img/cloth/5.png" alt="T-Shirt">
                                                 <div class="suggestion-details">
                                                     <div class="suggestion-title">New Summer Men's castrol T-Shirts</div>
                                                     <div class="suggestion-price">$7.00 - $99.50</div>
@@ -382,7 +382,41 @@
                       <div class="product-related-border">
                     <!-- row -->    
                           <div class="row">
-                                <div class="col"></div>
+                                <div class="col">
+                                    <h4>Related products</h4>
+                                    <div class="related-products-grid">
+                                        <div class="product-card">
+                                            <img src="./img/cloth/4.png" alt="Wallet">
+                                            <div class="product-title">Xiaomi Redmi 8 Original</div>
+                                            <div class="product-price">$32.00-$40.00</div>
+                                        </div>
+                                        <div class="product-card">
+                                            <img src="./img/tech/7.png" alt="Watch">
+                                            <div class="product-title">Xiaomi Redmi 8 Original</div>
+                                            <div class="product-price">$32.00-$40.00</div>
+                                        </div>
+                                        <div class="product-card">
+                                            <img src="./img/tech/8.png" alt="Headphones">
+                                            <div class="product-title">Xiaomi Redmi 8 Original</div>
+                                            <div class="product-price">$32.00-$40.00</div>
+                                        </div>
+                                        <div class="product-card">
+                                            <img src="./img/cloth/6.png" alt="Shorts">
+                                            <div class="product-title">Xiaomi Redmi 8 Original</div>
+                                            <div class="product-price">$32.00-$40.00</div>
+                                        </div>
+                                        <div class="product-card">
+                                            <img src="./img/tech/9.png" alt="Kettle">
+                                            <div class="product-title">Xiaomi Redmi 8 Original</div>
+                                            <div class="product-price">$32.00-$40.00</div>
+                                        </div>
+                                        <div class="product-card">
+                                            <img src="./img/interior/7.png" alt="Organizer">
+                                            <div class="product-title">Xiaomi Redmi 8 Original</div>
+                                            <div class="product-price">$32.00-$40.00</div>
+                                        </div>
+                                    </div>
+                                </div>
                           </div>
                       </div>
                   </div>
@@ -397,7 +431,13 @@
                       <div class="product-discount-border">
                     <!-- row -->    
                           <div class="row">
-                             <div class="col-12"></div>
+                            <div class="discount-banner">
+                                <div class="discount-left">
+                                    <h3 class="discount-title">Super discount on more than 100 USD</h3>
+                                    <p class="discount-text">Have you ever finally just write dummy info</p>
+                                </div>
+                                <a href="#" class="shop-now-button">Shop now</a>
+                            </div>
                           </div>
                       </div>
                   </div>
