--- a/checkout.html
+++ b/checkout.html
@@ -153,27 +153,33 @@
                         </div>
                       </div>
                       <!-- Calculation Section  -->
-                      <div class="subtotal d-flex justify-content-between mb-2">
-                        <span>Subtotal</span>
-                        <span>$1403.97</span>
-                      </div>
-                      <div class="discount d-flex justify-content-between mb-2 text-danger">
-                        <span>Discount</span>
-                        <span>– $60.00</span>
-                      </div>
-                      <div class="d-flex justify-content-between mb-2 text-success">
-                        <span>Tax</span>
-                        <span>+ $14.00</span>
-                      </div>
-                      <hr>
-                      <div class="d-flex justify-content-between fw-bold mb-3">
-                        <span>Total:</span>
-                        <span>$1357.97</span>
-                      </div>
-                      <button class="btn btn-success">Checkout</button>
-                      <div class="mt-3 text-center">
-                        <img src="./img/Misc/payment.png" width="200" alt="Cards">
-                      </div>
+                       <div class="calculation-box">
+                        <div class="subtotal">
+                            <span>Subtotal</span>
+                            <span>$1403.97</span>
+                          </div>
+                          <div class="discount">
+                            <span>Discount</span>
+                            <span class="text-danger">– $60.00</span>
+                          </div>
+                          <div class="tax">
+                            <span>Tax</span>
+                            <span class="text-success">+ $14.00</span>
+                          </div>
+                          <hr>
+                          <div class="total">
+                            <span>Total:</span>
+                            <span>$1357.97</span>
+                          </div>
+                          <button class="checkout">Checkout</button>
+                          <div class="mt-3 d-flex text-center justify-content-around">
+                            <img src="./img/Misc/payment.png" width="" alt="Cards">
+                            <img src="./img/Misc/payment-1.png" width="" alt="Cards">
+                            <img src="./img/Misc/payment-2.png" width="" alt="Cards">
+                            <img src="./img/Misc/payment-3.png" width="" alt="Cards">
+                            <img src="./img/Misc/payment-4.png" width="" alt="Cards">
+                          </div>
+                       </div>
                     </div>
                   </div>
                 </div>
@@ -181,6 +187,87 @@
          </div>
         <!-- /products cart  -->
 
+        <!-- Services Box  -->
+        <div class="services-box">
+            <div class="container">
+                <div class="row">
+                    <div class="serv-box col">
+                        <div class="service-icon">
+                            <i class="fa-solid fa-lock" style="color: #979797;"></i>
+                        </div>
+                        <div class="serv-box-text">
+                            <p class="titel">Secure Payment</p>
+                            <p class="details">Have you ever finally just</p>
+                        </div>
+                    </div>
+                    <div class="serv-box col">
+                        <div class="service-icon">
+                            <i class="fa-solid fa-message" style="color: #979797;"></i>
+                        </div>
+                        <div class="serv-box-text">
+                            <p class="titel">Customer support</p>
+                            <p class="details">Have you ever finally just</p>
+                        </div>
+                    </div>
+                    <div class="serv-box col">
+                        <div class="service-icon">
+                            <i class="fa-solid fa-truck" style="color: #979797;"></i>
+                        </div>
+                        <div class="serv-box-text">
+                            <p class="titel">Free delivery</p>
+                            <p class="details">Have you ever finally just</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+       <!-- Services Box  -->
+
+       <!-- saved product  -->
+       <div id="product-saved" class="section">
+        <!-- container -->
+          <div class="container">
+              <div class="product-saved-border">
+            <!-- row -->    
+                  <div class="row">
+                        <div class="col">
+                            <h5 class="mt-2 mb-2">Saved for later</h5>
+                            <div class="saved-products-grid">
+                                <div class="product-card">
+                                    <img src="./img/tech/2.png" alt="Wallet">
+                                    <div class="product-price">$99.50</div>
+                                    <div class="product-title">GoPro HERO6 4K Action <br>
+                                    Camera - Black</div>
+                                    <button class="move-to-cart"><i class="fa-solid fa-cart-shopping"></i> Move to cart</button>
+                                </div>
+                                <div class="product-card">
+                                    <img src="./img/tech/4.png" alt="Wallet">
+                                    <div class="product-price">$99.50</div>
+                                    <div class="product-title">GoPro HERO6 4K Action <br>
+                                    Camera - Black</div>
+                                    <button class="move-to-cart"><i class="fa-solid fa-cart-shopping"></i> Move to cart</button>
+                                </div>
+                                <div class="product-card">
+                                    <img src="./img/tech/8.png" alt="Wallet">
+                                    <div class="product-price">$99.50</div>
+                                    <div class="product-title">GoPro HERO6 4K Action <br>
+                                    Camera - Black</div>
+                                    <button class="move-to-cart"><i class="fa-solid fa-cart-shopping"></i> Move to cart</button>
+                                </div>
+                                <div class="product-card">
+                                    <img src="./img/tech/7.png" alt="Wallet">
+                                    <div class="product-price">$99.50</div>
+                                    <div class="product-title">GoPro HERO6 4K Action <br>
+                                    Camera - Black</div>
+                                    <button class="move-to-cart"><i class="fa-solid fa-cart-shopping"></i> Move to cart</button>
+                                </div>
+                            </div>
+                        </div>
+                  </div>
+              </div>
+          </div>
+        </div>
+           <!-- saved products  -->
          <!-- discount product  -->
          <div id="product-discount" class="section">
             <!-- container -->
