--- a/checkout.html
+++ b/checkout.html
@@ -83,7 +83,7 @@
                     <div class="cart-item d-flex justify-content-between align-items-start">
                       <div class="d-flex gap-3">
                         <img src="./img/cloth/1.png" alt="item">
-                        <div>
+                        <div class="item-detail">
                           <p class="item-title">Blue Polo T-Shirt for Men</p>
                           <p class="item-description">Size: medium, Color: blue, Material: Plastic <br> Seller: Artel Market</p>
                           <a href="#" class="remove">Remove</a>
@@ -172,7 +172,7 @@
                             <span>$1357.97</span>
                           </div>
                           <button class="checkout">Checkout</button>
-                          <div class="mt-3 d-flex text-center justify-content-around">
+                          <div class="payment mt-3 d-flex text-center justify-content-around">
                             <img src="./img/Misc/payment.png" width="" alt="Cards">
                             <img src="./img/Misc/payment-1.png" width="" alt="Cards">
                             <img src="./img/Misc/payment-2.png" width="" alt="Cards">
