--- a/index.html
+++ b/index.html
@@ -96,7 +96,9 @@
                             <li><a href="#">Projects</a></li>
                             <li><a href="#">Menu item</a></li>
                             <li><a href="#"><span>Help </span><i class="fa-sharp fa-solid fa-chevron-down"
-                                        style="color: #8b96a5"></i></a></li>
+                                        style="color: #8b96a5"></i>
+                            </a>
+                            </li>
                         </ul>
                     </div>
                     <div class="col-md-6">
